@@ -1,3 +1,7 @@
+2009-04-22  Manuel Arostegui <marostegui@artica.es>
+
+	* operation/agentes/sla_view.php: Fixed bug #2777504
+
 2009-04-21  Evi Vanoost <vanooste@rcbi.rochester.edu>
 
 	* include/functions_ui.php: Added get_url_refresh which gets the correct
